--- a/css/styles.css
+++ b/css/styles.css
@@ -11,46 +11,132 @@
   --Blue: #339ecc;
   --LightRed: #ff4242;
 }
-//body type:
-// font-family: 'Open Sans', sans-serif;
+/*body type:
+  font-family: 'Open Sans', sans-serif;
+  Headings, Call-to-actions, Header Navigation
+  font-family: 'Raleway', sans-serif;
+*/
 
-//  Headings, Call-to-actions, Header Navigation
-//   font-family: 'Raleway', sans-serif;
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
 }
 body {
-  text-align: center;
-  background-color: var(--DarkBlueMain);
+  background-color: darkslategrey;
   font-family: "Open Sans", sans-serif;
   color: #fff;
-}
-#container {
-  margin: 60px 20px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 header {
-  align-items: center;
-  display: flex;
-  justify-content: space-evenly;
-  box-shadow: 4px 4px 14px #aaa;
   position: fixed;
   top: 0;
-  width: 100%;
+  margin: 0 auto;
+  width: 100vw;
 }
-header a {
+.navbar {
+  display: grid;
+  min-height: 64px;
+  grid-auto-flow: column;
+  grid-gap: 20px;
+  margin: 0 20px 0 20px;
+}
+
+.nav-logo {
+  display: grid;
+  align-content: center;
+  justify-content: start;
+  margin-top: 25px;
+  width: 60px;
+}
+.nav-list {
+  display: grid;
+  justify-content: end;
+  align-content: center;
+  grid-auto-flow: column;
+  grid-gap: 25px;
+  font-size: 0.85em;
+}
+.nav-list a {
+  color: white;
   text-decoration: none;
+}
+li:first-child {
+  flex-grow: 4;
+}
+/*top section*/
+/* =============top section*=================*/
+.container_topsection {
+  display: inline-block;
+  text-align: center;
+  background-size: cover;
+  padding-bottom: 25px;
+  width: 100vw;
+}
+.curvyMobile img {
+  width: 100vw;
+  position: relative;
+  margin-top: -20px;
+  z-index: -1;
+}
+/* ==================topsection-text============*/
+.container_topsection-text {
+  line-height: 1em;
+  margin-top: -124px;
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* ==============================*/
+/* buttons */
+
+button {
+  outline: none;
+  background-color: var(--Blue);
+  border-radius: 50px;
+  font-size: 1.95em;
   color: #fff;
+  width: 250px;
 }
-.logo {
-  padding: 10px;
-  width: 50%;
+
+/* white button*/
+.btn-white {
+  background-color: #fff;
+  border-radius: 50px;
 }
+
+/*========cute icons=======midsection-grid =====*/
+
+.container_midsection-grid div {
+  display: block;
+  margin-top: 120px;
+}
+.flx {
+  padding: 20px;
+  text-align: center;
+}
+
+.container_midsection-illustration-and-text {
+  background-size: 60% 40%;
+}
+/* ==============Stay productive================*/
+.container_midsection-StayProd {
+  padding-top: 55px;
+}
+#stayProductive-text {
+  text-align: left;
+  padding: 0 25px 0 25px;
+}
+
+/* ==============Illustrstions================*/
 .illustration {
+  background-color: var(--DarkBlueButtons);
   margin-top: 80px;
-  width: 80%;
+  width: 90%;
+}
+.illustration-2 {
+  width: 90%;
 }
 h1 {
   font-family: "Raleway", sans-serif;
@@ -60,37 +146,25 @@ h1 {
 p {
   font-size: 0.85em;
 }
-.btn {
-  padding: 15px;
-  background-color: var(--Blue);
-  border-radius: 50px;
-  outline: none;
-  // width: 80%;
-  // }
-  // button {
-  font-size: 1.95em;
-}
-.btn-white {
-  padding: 14px;
-  background-color: #fff;
-  border-radius: 50px;
-}
-.stayProductive {
-  text-align: left;
-  padding-bottom: 150px;
-}
+
 h4 {
   color: var(--Cyan);
   font-size: 0.5em;
   text-decoration: underline;
   text-decoration-color: var(--Cyan);
+  -webkit-text-decoration-color: #65e2d9; /* Safari */
 }
+/* =================cards============*/
+
 .quotes {
   display: block;
+  padding: 50px 0 0 25px;
 }
+/* =================cards============*/
 .cards {
   font-size: 0.86em;
-  height: 200px;
+  width: 90%;
+  margin: 0 auto;
   text-align: left;
 }
 .card-profiles {
@@ -111,29 +185,78 @@ h4 {
 }
 .card_profile_text {
   font-size: 0.85em;
-  // margin-bottom: 33px;
-}
-.large-logo {
   margin-top: 50px;
-}
-.card_call-to-action {
-  margin-top: 150px;
-  background-color: var(--DarkBlueCards);
-  border-radius: 16px;
-  padding: 15px;
-  margin-bottom: 20px;
   text-align: center;
 }
+/* =====================call to action=========*/
+.backgroundColorMain {
+  background-color: var(--DarkBlueMain);
+}
+.card_call-to-action {
+  background-color: var(--DarkBlueCards);
+  border-radius: 16px;
+  margin: 150px auto 25px auto;
+  width: 90%;
+}
+.card_call-to-action-text {
+  padding: 20px;
+}
+/* =====================Section=========*/
 section {
   display: flex;
   flex-direction: column;
   gap: 20px;
   text-align: left;
-  margin-bottom: 100px;
 }
+.contact-location {
+  width: 350px;
+  margin: 0 auto;
+}
+
 .section_right {
   margin-left: 40px;
+  text-align: left;
 }
 .contact-icon {
   padding-right: 20px;
+}
+/* =====================footer=========*/
+.darkFooterArea {
+  background-color: var(--DarkBlueFooter);
+}
+.dkFooterArea_large-logo {
+  padding-top: 45px;
+  margin-left: 25px;
+}
+.about-list ul {
+  line-height: 2em;
+  margin-left: 36px;
+  list-style-type: none;
+}
+@media screen and (min-width: 480px) {
+  /* #stayProductive-text {
+  padding: 30px;
+} */
+}
+
+@media screen and (min-width: 860px) {
+  .container_midsection-grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    flex-wrap: wrap;
+    max-width: 1000px;
+  }
+  /* Illustration-2 */
+
+  .illustration-2 {
+    width: 100%;
+  }
+  .container_midsection-StayProd {
+    display: flex;
+    padding: 20px;
+  }
+  .container_midsection-StayProd {
+    display: flex;
+  }
 }
