--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ li:first-child {
   padding-bottom: 25px;
   width: 100vw;
 }
-img .curvyMobile {
+img.curvyMobile {
   outline: 2px dotted red;
   width: 100vw;
   position: relative;
@@ -110,18 +110,25 @@ img .curvyMobile {
 #btn {
   background-color: var(--Blue);
   border-radius: 50px;
-  color: #fff;
-  font-size: 1.25em;
   margin: 0 auto;
+  padding: 7px;
   width: 250px;
 }
+button {
+  background-color: transparent;
+  outline: none;
+  font-size: 24px;
+  color: #fff;
+}
 /* white button*/
-#btn-white {
+div#btn-white {
   background-color: #fff;
   border-radius: 50px;
   font-size: 1em;
   margin: 0 auto;
   width: 250px;
+  padding: 7px;
+  color: var(--DarkBlueMain);
 }
 
 /*========cute icons=======midsection-grid =====*/
@@ -152,7 +159,7 @@ img .curvyMobile {
 .illustration {
   background-color: var(--DarkBlueButtons);
   margin-top: 80px;
-  width: 90%;
+  width: 100%;
 }
 .illustration-2 {
   width: 90%;
@@ -269,6 +276,10 @@ h4 {
     max-width: 1000px;
     margin: 50px auto;
   }
+  .illustration {
+    width: min(90%, 600px);
+  }
+
   /* Illustration-2 */
 
   .illustration-2 {
@@ -292,5 +303,6 @@ h4 {
   }
 
   .darkFooterArea {
+    display: grid;
   }
 }
